Bug fixes on mobile

--- a/components/Layout/Intro/index.module.scss
+++ b/components/Layout/Intro/index.module.scss
@@ -14,7 +14,7 @@
 
 .background {
   background-color: v.$sunny;
-  height: 100%;
+  height: 70vh;
   left: 0;
   min-height: 550px;
   position: absolute;
