--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,6 +15,7 @@ html {
 
 body {
   overflow-x: hidden;
+  padding: 0 !important;
 }
 
 *,
